2005-05-30  Christian Stimming  <stimming@tuhh.de>

	* guide/de_DE/ch_oview.xml, ch_basics.xml: Initial German Tutorial
	translation by Gerold Strobel <gs@gerold-strobel.com>.

2005-03-21  Neil Williams <linux@codehelp.co.uk>
	* guide/C/gnucash-guide.sgml: New file in SGML
	to link existing XML to PDF generation.
	* help/C/custom.xml: 
	* help/C/gettingstarted.xml:
	* help/C/intro.xml:
	* help/C/usage.xml:
	New files containing content from
	gnucash-help.xml to reduce duplication.
	* elp/C/gnucash-help.xml: Removing content now placed
	in individual files.
	* help/C/gnucash-help.sgml: New file in SGML to link
	existing XML to PDF generation.
	* help/C/Makefile.am: Added new files to make.
	* README: Advice added on using XSL and SGML tools to generate
         alternative output formats.
	* HACKING: Advice added on maintaining PDF generation
	functionality.
	* NEWS: Added PDF tips

2005-02-26  Neil Williams <linux@codehelp.co.uk>
	* guide/C/ch_oview.xml: Corrected listitem syntax
	* xsl/admonitions.xsl:
	* xsl/copyright.xsl:
	* xsl/toc.xsl: Adding namespace for doc: prefix

2004-12-10  Chris Lyttle  <chris@wilddev.net>
	* NEWS: Release of version 1.8.5
	* configure.in: Release of version 1.8.5
	* xsl/general-customization.xsl: patch from Johan Buret
	* guide/de_DE/figures: added to stop build breakage
	* guide/de_DE/figures/basics_accounts.png: added to stop build breakage

2004-10-31  Jon Lapham  <lapham@jandr.org>
    * guide/C/ch_dep.xml: David Harrison's updates

2004-10-03  Christian Stimming  <stimming@tuhh.de>

	* guide/de_DE/gnucash-guide.xml: Add outline for German
	translation of gnucash guide.

2004-08-24  Jon Lapham  <lapham@jandr.org>
    * guide/C/ch_oview.xml: chapter overhaul by pks
    * guide/C/ch_oview.xml: update language support list

2004-04-19  Derek Atkins  <derek@ihtfp.com>
	* configure.in: check for PERL=no and error out if you can't find perl

2004-04-10  Chris Lyttle  <chris@wilddev.net>
	* NEWS: Release of version 1.8.4