@@ -26,7 +26,7 @@ necessary.
 
 Reviewers;
 
-Please check out the documentation module from the GnuCash CVS -
+Please check out the documentation module from the GnuCash SVN -
 gnucash-docs. For those not familiar with cvs, the gnucash website has a
 description at http://www.gnucash.org/en/hacking.phtml The only change
 to get the docs is to change the checkout gnucash to checkout
@@ -43,7 +43,7 @@ Also checkout the docs cvs as above. The usual procedure for
 contributors to GnuCash is to initially submit patches to the
 gnucash-patches mailing list, though I will also accept patches
 submitted to me directly. I will handle getting the patches added into
-CVS. You can also add the patch to a bug report in bugzilla if you wish.
+SVN. You can also add the patch to a bug report in bugzilla if you wish.
 
 I would like writers to also let other know their intentions of which
 section they wish to tackle. Please forward this to gnucash-devel so
