@@ -2,14 +2,10 @@ SUBDIRS = help \
 	  guide \
 	  doc-tools
 
-EXTRA_DIST = gnucash-docs.spec.in \
+EXTRA_DIST = gnucash-docs.spec \
 	     COPYING-DOCS \
 	     xmldocs.make \
 	     omf.make \
 	     stylesheet \
 	     xsl \
 	     HACKING
-
-dist-hook: gnucash-docs.spec
-	cp gnucash-docs.spec $(distdir)
-
