@@ -1,19 +1,25 @@
-#!/bin/sh
+#!/bin/sh -x
 # Run this to generate all the initial makefiles, etc.
 
-srcdir=`dirname $0`
-test -z "$srcdir" && srcdir=.
-
-ORIGDIR=`pwd`
-cd $srcdir
+# Exit this script if any command fails with non-zero exit status.
+set -e
 
 PROJECT=gnucash-docs
-TEST_TYPE=-f
-FILE=Makefile.am
-
 DIE=0
 
-(autoconf --version) < /dev/null > /dev/null 2>&1 || {
+# First cache the command names in variables. If you want to
+# override the names, simply set the variables before calling this
+# script.
+
+#: ${INTLTOOLIZE=intltoolize}
+#: ${GETTEXTIZE=gettextize}
+: ${LIBTOOLIZE=libtoolize}
+: ${ACLOCAL=aclocal}
+: ${AUTOHEADER=autoheader}
+: ${AUTOMAKE=automake}
+: ${AUTOCONF=autoconf}
+
+(${AUTOCONF} --version) < /dev/null > /dev/null 2>&1 || {
 	echo
 	echo "You must have autoconf installed to compile $PROJECT."
 	echo "Download the appropriate package for your distribution,"
@@ -21,15 +27,15 @@ DIE=0
 	DIE=1
 }
 
-(libtool --version) < /dev/null > /dev/null 2>&1 || {
+(${LIBTOOLIZE} --version) < /dev/null > /dev/null 2>&1 || {
 	echo
-	echo "You must have libtool installed to compile $PROJECT."
+	echo "You must have libtoolize installed to compile $PROJECT."
 	echo "Get ftp://alpha.gnu.org/gnu/libtool-1.0h.tar.gz"
 	echo "(or a newer version if it is available)"
 	DIE=1
 }
 
-(automake --version) < /dev/null > /dev/null 2>&1 || {
+(${AUTOMAKE} --version) < /dev/null > /dev/null 2>&1 || {
 	echo
 	echo "You must have automake installed to compile $PROJECT."
 	echo "Get ftp://ftp.cygnus.com/pub/home/tromey/automake-1.2d.tar.gz"
@@ -41,40 +47,12 @@ if test "$DIE" -eq 1; then
 	exit 1
 fi
 
-test $TEST_TYPE $FILE || {
-	echo "You must run this script in the top-level $PROJECT directory"
-	exit 1
-}
+#${INTLTOOLIZE}
+#${GETTEXTIZE}
+${LIBTOOLIZE} -f --automake
+${ACLOCAL} ${ACLOCAL_FLAGS}
+${AUTOHEADER}
+${AUTOMAKE} --add-missing
+${AUTOCONF}
 
-if test -z "$*"; then
-	echo "I am going to run ./configure with no arguments - if you wish "
-        echo "to pass any to it, please specify them on the $0 command line."
-fi
-
-case $CC in
-*lcc | *lcc\ *) am_opt=--include-deps;;
-esac
-
-#echo "Running gettextize...  Ignore non-fatal messages."
-# Hmm, we specify --force here, since otherwise things don't
-# get added reliably, but we don't want to overwrite intl
-# while making dist.
-#echo "no" | gettextize --copy --force
-
-echo "Running libtoolize"
-libtoolize --copy --force
-
-aclocal $ACLOCAL_FLAGS
-
-# optionally feature autoheader
-(autoheader --version)  < /dev/null > /dev/null 2>&1 && autoheader
-
-automake -a $am_opt
-autoconf
-
-cd $ORIGDIR
-
-$srcdir/configure --enable-maintainer-mode "$@"
-
-echo 
-echo "Now type 'make' to compile $PROJECT."
+echo You must now run ./configure "$@"
