@@ -161,7 +161,7 @@ if test "$prefer_db1" = "yes"; then
 	if test "$ac_cv_header_db_185_h$ac_cv_header_db1_db_h$ac_cv_header_db4_db_185_h" = nonono; then
 	  AC_MSG_ERROR([Berkeley db library required for GnuCash])
 	fi
-	AC_DEFINE(PREFER_DB1)
+	AC_DEFINE([PREFER_DB1], [], [The db1 database library])
 else
 	AC_CHECK_HEADERS(db.h db_185.h db1/db.h db4/db_185.h)
 
