@@ -1,3 +1,9 @@
+2005-11-18  Christian Stimming  <stimming@tuhh.de>
+
+	* autogen.sh: Simplify autogen script; remove the automatic call
+	to ./configure from autogen.sh; instead, only print a reminder
+	that from now on, ./configure has to be called separately.
+
 2005-05-30  Christian Stimming  <stimming@tuhh.de>
 
 	* guide/de_DE/ch_oview.xml, ch_basics.xml: Initial German Tutorial
